# AEnvironment

./: CMakeLists.txt  LICENSE  README.md
include/: CMakeLists.txt  GLref.h  atoms.h  automata.h  brain.h  environment.h  evolution.h  food.h  glref.h  glutil.h  linear.h  neuralnet.h  object.h
src/: CMakeLists.txt  atoms.cpp  automata.cpp  brain.cpp  environment.cpp  evolution.cpp  food.cpp  glutil.cpp  linear.cpp  main.cpp  neuralnet.cpp
